// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`single slider > handles correctly onChange with min and max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        >
          <div
            class="styles__a5ifr1w styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div>
              <div
                class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6c styles_controls_false__1ce7gb6d styles_size_small__1ce7gb6i styles_undefined_compound_0__1ce7gb6j"
                    data-testid="slider-input"
                    id="_r_7o_"
                    inputmode="numeric"
                    max="10"
                    min="2"
                    placeholder=""
                    step="1"
                    type="number"
                    value="3"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_7n_"
            max="10"
            min="2"
            name="slider"
            step="1"
            style="--a5ifr12: calc(12.5% - 2px); --a5ifr11: #ffffff; background-size: 12.5% 100%;"
            tabindex="0"
            type="range"
            value="3"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > handles correctly with custom scale 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        >
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            6
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="slider"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            data-testid="slider"
            id="_r_7v_"
            max="3"
            min="0"
            name="slider"
            step="1"
            style="--a5ifr12: calc(66.66666666666667% - 10.666666666666668px); --a5ifr11: #ffffff; background-size: 66.66666666666667% 100%;"
            tabindex="0"
            type="range"
            value="2"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: calc(0% - 0px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                3
              </p>
            </span>
            <span
              class="styles__a5ifr18"
              data-element-left="false"
              data-element-right="false"
              data-value="1"
              style="--a5ifr13: calc(33.333333333333336% - 5.333333333333334px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                5
              </p>
            </span>
            <span
              class="styles__a5ifr18"
              data-element-left="false"
              data-element-right="false"
              data-value="2"
              style="--a5ifr13: calc(66.66666666666667% - 10.666666666666668px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_captionStrong__m4c9owt style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
              >
                6
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="3"
              style="--a5ifr13: calc(100% - 16px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                10
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_1_"
            >
              Label
            </label>
            <span
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
            >
              labeldescription
            </span>
          </div>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-describedby="_r_0_"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_1_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_0_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_4n_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_4n_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value - direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_5j_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_row__a5ifr1n styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="row"
              data-error="false"
              id="_r_5j_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
        custom value
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_57_"
          >
            Label
          </label>
          custom value
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_57_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_5d_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_5d_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly custom value with input  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_5p_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_row__a5ifr1n styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="row"
              data-error="false"
              id="_r_5p_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
        <div
          class="styles__a5ifr1w styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div>
            <div
              class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
              data-controls="false"
              data-disabled="false"
              data-error="false"
              data-size="small"
              data-success="false"
              data-unit="false"
            >
              <div
                class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_justifyContent_space-between_xxsmall__x6hyh561"
                style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
              >
                <input
                  aria-label="input"
                  class="styles__1ce7gb6c styles_controls_false__1ce7gb6d styles_size_small__1ce7gb6i styles_undefined_compound_0__1ce7gb6j"
                  data-testid="slider-input"
                  id="_r_5u_"
                  inputmode="numeric"
                  max="100"
                  min="0"
                  placeholder=""
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly default tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_4v_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <div
            class="styles__1y5sygv5"
          >
            <input
              aria-label="Name"
              class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
              data-direction="column"
              data-error="false"
              id="_r_4v_"
              max="100"
              min="0"
              name="Name"
              step="1"
              style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
              tabindex="0"
              type="range"
              value="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_1r_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_row__a5ifr1n styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="row"
            data-error="false"
            id="_r_1r_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <span
          class="styles__a5ifr1e styles_isDouble_true__a5ifr1g style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          data-testid="slider-value"
          style="--textAlign__qabug40: center;"
        >
          1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly direction row with input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_23_"
          >
            Label
          </label>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_row__a5ifr1n styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="row"
            data-error="false"
            id="_r_23_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
        <div
          class="styles__a5ifr1w styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div>
            <div
              class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
              data-controls="false"
              data-disabled="false"
              data-error="false"
              data-size="small"
              data-success="false"
              data-unit="false"
            >
              <div
                class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_justifyContent_space-between_xxsmall__x6hyh561"
                style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
              >
                <input
                  aria-label="input"
                  class="styles__1ce7gb6c styles_controls_false__1ce7gb6d styles_size_small__1ce7gb6i styles_undefined_compound_0__1ce7gb6j"
                  data-testid="slider-input"
                  id="_r_28_"
                  inputmode="numeric"
                  max="100"
                  min="0"
                  placeholder=""
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_2t_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-disabled="true"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles_disabled_true__a5ifr1p styles__a5ifr1b styles_disabled_true__a5ifr1d"
            data-direction="column"
            data-error="false"
            disabled=""
            id="_r_2t_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_35_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-describedby="_r_34_"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles_error_true__a5ifr1q styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="true"
            id="_r_35_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_34_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error boolean and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_3f_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-describedby="_r_3e_"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles_error_true__a5ifr1q styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="true"
            id="_r_3f_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_3e_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_3p_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-describedby="_r_3o_"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles_error_true__a5ifr1q styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="true"
            id="_r_3p_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_3o_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly error string and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_43_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-describedby="_r_42_"
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles_error_true__a5ifr1q styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="true"
            id="_r_43_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_42_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_4d_"
          >
            Label
          </label>
          <div
            class="styles__a5ifr1w styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div>
              <div
                class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="false"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6c styles_controls_false__1ce7gb6d styles_size_small__1ce7gb6i styles_undefined_compound_0__1ce7gb6j"
                    data-testid="slider-input"
                    id="_r_4g_"
                    inputmode="numeric"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_4d_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_77_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_77_"
            max="10"
            min="1"
            name="Name"
            step="1"
            style="--a5ifr12: calc(0% - 0px); --a5ifr11: #ffffff; background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly prefix 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_1j_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            %1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_1j_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <div
            class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_d_"
            >
              Label
            </label>
            <span
              class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
            >
              *
            </span>
          </div>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_d_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_7f_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_7f_"
            max="100"
            min="0"
            name="Name"
            step="0.5"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix complex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_v_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1
            <button
              type="button"
            >
              suffix
            </button>
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_v_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_n_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            1%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_n_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly suffix string input 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_17_"
          >
            Label
          </label>
          <div
            class="styles__a5ifr1w styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div>
              <div
                class="styles__1ce7gb6k styles_size_small__1ce7gb6n styles_state_default__1ce7gb6o"
                data-controls="false"
                data-disabled="false"
                data-error="false"
                data-size="small"
                data-success="false"
                data-unit="true"
              >
                <div
                  class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh5d styles_justifyContent_space-between_xxsmall__x6hyh561"
                  style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
                >
                  <input
                    aria-label="input"
                    class="styles__1ce7gb6c styles_controls_false__1ce7gb6d styles_hasUnit_true__1ce7gb6f styles_size_small__1ce7gb6i"
                    data-testid="slider-input"
                    id="_r_1a_"
                    inputmode="numeric"
                    max="100"
                    min="0"
                    placeholder=""
                    step="1"
                    type="number"
                    value="1"
                  />
                  <span
                    class="styles__1ce7gb65 styles_size_small__1ce7gb6a styles_controls_false__1ce7gb6b style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  >
                    %
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_17_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with custom ticks 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_63_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_63_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 16px); --a5ifr11: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: calc(0% - 0px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                1 Mb
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--a5ifr13: calc(100% - 16px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_captionStrong__m4c9owt style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
              >
                30MB
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with custom ticks and default scale 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_6f_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_6f_"
            max="100"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(1% - 0.16px); --a5ifr11: #ffffff; background-size: 1% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="1"
              style="--a5ifr13: calc(1% - 0.16px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_captionStrong__m4c9owt style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
              >
                1 Mb
              </p>
            </span>
            <span
              class="styles__a5ifr18"
              data-element-left="false"
              data-element-right="true"
              data-value="30"
              style="--a5ifr13: calc(30% - 4.8px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                30MB
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with default ticks without label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      data-options="true"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_6r_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            30%
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_6r_"
            max="1"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 16px); --a5ifr11: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="1"
          />
          <datalist
            class="styles__a5ifr16"
            data-double="false"
          >
            <span
              class="styles__a5ifr18 styles_left_true__a5ifr19"
              data-element-left="true"
              data-element-right="false"
              data-value="0"
              style="--a5ifr13: calc(0% - 0px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              >
                0
              </p>
            </span>
            <span
              class="styles__a5ifr18 styles_right_true__a5ifr1a"
              data-element-left="false"
              data-element-right="true"
              data-value="1"
              style="--a5ifr13: calc(100% - 16px + 8px);"
            >
              <p
                class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_primary__m4c9owc style_variant_captionStrong__m4c9owt style_undefined_compound_0__m4c9ow1a style_undefined_compound_40__m4c9ow2e"
              >
                1
              </p>
            </span>
          </datalist>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value < min 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_2d_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_2d_"
            max="100"
            min="10"
            name="Name"
            step="1"
            style="--a5ifr12: calc(0% - 0px); --a5ifr11: #ffffff; background-size: 0% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`single slider > renders correctly with value > max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p"
      data-options="false"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_left_xxsmall__toi52u6v"
      >
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
        >
          <label
            class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            for="_r_2l_"
          >
            Label
          </label>
          <span
            class="styles__a5ifr1e styles_isDouble_false__a5ifr1f styles_isPadded_true__a5ifr1h style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            data-testid="slider-value"
            style="--textAlign__qabug40: right;"
          >
            10
          </span>
        </div>
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-end_xxsmall__toi52u6p"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_center_xxsmall__toi52u61"
          style="--_4k0ekn0: 100%;"
        >
          <input
            aria-label="Name"
            class="styles__a5ifr1l styles_direction_column__a5ifr1m styles__a5ifr1b styles_disabled_false__a5ifr1c"
            data-direction="column"
            data-error="false"
            id="_r_2l_"
            max="10"
            min="0"
            name="Name"
            step="1"
            style="--a5ifr12: calc(100% - 16px); --a5ifr11: #ffffff; background-size: 100% 100%;"
            tabindex="0"
            type="range"
            value="10"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
